# fast_api_postgre_proj

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/common/: exceptions.py
src/database/: connection.py  schema.py
src/repository/: book_repository.py
src/schema/: request.py  response.py
src/scripts/: sql_scripts.sql
src/services/: book_service.py
src/test/: test_db_connection.py
src/utils/: logger.py  result_mapper.py
